--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -32,7 +32,7 @@ path = "tests/integration/tests/mod.rs"
 [dependencies]
 # Catalyst Internal Crates
 # Using branch with transport enable methods until merged into a release tag
-hermes-ipfs = { version = "0.0.8", git = "https://github.com/input-output-hk/catalyst-libs.git", branch = "feat/hermes-ipfs-persistent-keypair" }
+hermes-ipfs = { version = "0.0.9", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "hermes-ipfs/v0.0.9" }
 cardano-blockchain-types = { version = "0.0.9", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "cardano-blockchain-types/v0.0.9" }
 cardano-chain-follower = { version = "0.0.19", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "cardano-chain-follower/v0.0.19" }
 catalyst-types = { version = "0.0.7", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "catalyst-types/v0.0.7" }
