--- a/p2p-testing/justfile
+++ b/p2p-testing/justfile
@@ -3,16 +3,17 @@
 # ==============================================================================
 #
 # 6-node Docker setup for testing P2P features:
-# - Persistent IPFS keypairs via PR#694 (peer IDs stable across stop/restart)
+# - Persistent IPFS keypairs (peer IDs stable across stop/restart)
 # - Dynamic bootstrap discovery (syncs docker-compose.yml after volume clean)
 # - Bootstrap retry logic (automatic reconnection on failures)
 # - Gossipsub v1.2 PubSub with on-topic event handler
 # - Full mesh connectivity on isolated network (172.20.0.0/16)
 #
 # WHY 6 NODES?
-#   Gossipsub default mesh_n=6 requires at least 6 peers for optimal operation.
-#   With fewer nodes, PubSub publish operations block waiting for mesh to form.
-#   Alternative would be forking rust-ipfs to add small mesh configuration support.
+#   Gossipsub's mesh_n parameter (default: 6) defines the target number of peers
+#   each node maintains in its PubSub mesh. With fewer than 6 peers, publish
+#   operations block waiting for the mesh to reach target size. Alternative would
+#   be forking rust-ipfs to make mesh_n configurable for small test environments.
 #
 # QUICK START (first time):
 #   just quickstart     # Does everything: build, start, test, verify
@@ -64,7 +65,8 @@ default:
 # ==============================================================================
 # HELPER FUNCTIONS & UTILITIES
 # ==============================================================================
-# Internal helpers (prefix: _) - not meant to be called directly by users
+# Internal helpers (prefix: _) - implementation details for public commands,
+# not shown in 'just --list', not meant for direct user invocation
 
 # Check if all 6 nodes are running
 _check-nodes-running:
@@ -77,7 +79,8 @@ _check-nodes-running:
         exit 1
     fi
 
-# Helper: Wait for HTTP endpoint to be ready with retries
+# Wait for node's HTTP endpoint to respond (checks /health or / with timeout)
+# Retries with exponential backoff, exits 0 on success, 1 on failure
 # Usage: just _wait-for-http [max_retries] [delay_seconds]
 _wait-for-http retries="6" delay="5":
     #!/usr/bin/env bash
@@ -716,17 +719,19 @@ clean:
 # BOOTSTRAP PEER DISCOVERY
 # ==============================================================================
 #
+# TL;DR: After 'just clean', run 'just init-bootstrap' to sync peer IDs in
+#        docker-compose.yml. Otherwise nodes can't find each other and mesh fails.
+#
 # BACKGROUND:
-#   Hermes persists IPFS keypairs in Docker volumes (PR#694)
+#   Hermes persists IPFS keypairs in Docker volumes
 #   - Keypair location: /home/hermes/.hermes/ipfs/keypair (inside volume)
 #   - Peer IDs remain stable across stop/restart (volumes preserved)
 #   - This works great for normal operations
 #
 # THE PROBLEM:
-#   docker-compose.yml has HARDCODED bootstrap peer IDs
-#   - Each node's IPFS_BOOTSTRAP_PEERS env var contains specific peer IDs
-#   - Example: /ip4/172.20.0.11/tcp/4001/p2p/12D3KooW... (hardcoded)
-#   - When 'just clean' deletes volumes, new keypairs = new peer IDs
+#   docker-compose.yml has HARDCODED bootstrap peer IDs in IPFS_BOOTSTRAP_PEERS
+#   - Each node's env var contains specific peer IDs (e.g., /ip4/172.20.0.11/tcp/4001/p2p/12D3KooW...)
+#   - When 'just clean' deletes volumes → new keypairs generated → new peer IDs
 #   - Hardcoded IDs in docker-compose.yml become stale → mesh formation fails
 #   - Errors: "wrong peer id", "Unexpected peer ID", no PubSub propagation
 #
@@ -742,19 +747,13 @@ clean:
 #   ✅ First time setup (no volumes exist yet)
 #   ❌ NOT after 'just stop/restart' (volumes preserved → peer IDs unchanged)
 #
-# FUTURE IMPROVEMENT (Production Deployment):
-#   Pre-generated keypairs for bootstrap nodes
-#   - Generate stable keypairs: p2p-testing/identities/bootstrap-node{1-3}.keypair
+# PRODUCTION DEPLOYMENT ALTERNATIVE:
+#   For production, use pre-generated stable bootstrap keypairs instead:
+#   - Generate keypairs: p2p-testing/identities/bootstrap-node{1-3}.keypair
 #   - Add to Dockerfile: COPY identities/*.keypair /home/hermes/.hermes/ipfs/
-#   - Result: Deterministic, well-known bootstrap peer IDs
-#
-#   Why this matters for production:
-#   - Hermes nodes deployed across the internet need to find each other
-#   - GossipSub (PubSub) requires connected peers to exchange messages
-#   - Bootstrap nodes provide the initial entry point to the Hermes mesh
-#   - New Hermes deployments can hardcode stable bootstrap addresses:
-#     /dns4/bootstrap1.hermes.io/tcp/4001/p2p/12D3KooW...
-#   - No manual init-bootstrap needed, matches production operational model
+#   - Hardcode well-known peer IDs: /dns4/bootstrap1.hermes.io/tcp/4001/p2p/12D3KooW...
+#   - Benefit: New nodes can connect immediately, no init-bootstrap needed
+#   - Reason: GossipSub requires stable entry points for mesh formation
 #
 # ==============================================================================
 
@@ -850,7 +849,7 @@ init-bootstrap:
     echo "   Node 2: $PEER_ID_2"
     echo "   Node 3: $PEER_ID_3"
     echo ""
-    echo "💡 Keypairs persist in Docker volumes (PR#694)"
+    echo "💡 Keypairs persist in Docker volumes"
     echo "   - Normal stop/restart: No action needed, peer IDs stay the same"
     echo "   - After 'just clean': Must run 'just init-bootstrap' again"
     echo ""
