docs: improve clarity of P2P networking comments
  - Explain mesh_n parameter and its effect on Gossipsub operations
  - Add TL;DR sections to bootstrap discovery and PubSub warnings
  - Clarify cross-platform builds (cargo vs Earthly) and GLIBC compatibility
  - Add DNS analogy for bootstrap peers concept
  - List explicit 5-step post document workflow
  - Explain logging levels (debug = P2P diagnostics, info = app events)

--- a/p2p-testing/justfile
+++ b/p2p-testing/justfile
@@ -1188,7 +1188,7 @@ _test-pubsub-execute:
         echo "NODE_RECEIVE_TIME_$NODE=${NODE_RECEIVE_TIME[$NODE]}" >> "$RESULTS_FILE"
     done
 
-# Internal: Show detailed visualization and statistics
+# Internal: Show detailed visualization and statistics for PubSub test
 _test-pubsub-visualize:
     #!/usr/bin/env bash
     set -euo pipefail
