docs: improve clarity and fix clippy warnings
  - Explain mesh_n, bootstrap peers (DNS analogy), and 5-step post workflow
  - Fix confusing DHT log: need 2+ waiting for ourselves to appear
  - Add backticks around PubSub and function names (clippy doc-markdown)
  - Simplify TROUBLESHOOTING reset (quickstart handles rebuilds)
  - Clarify quickstart uses existing binaries (run just build-all after code changes)

--- a/p2p-testing/justfile
+++ b/p2p-testing/justfile
@@ -189,6 +189,7 @@ _extract-cid response:
 # ==============================================================================
 
 # Complete end-to-end setup and test (for first-time users)
+# NOTE: Uses existing binaries if present. If you changed code, run 'just build-all' first.
 quickstart:
     #!/usr/bin/env bash
     set -euo pipefail
@@ -218,7 +219,8 @@ quickstart:
             exit 1
         }
     else
-        echo -e "  ${GREEN}✅ Artifacts already exist${RESET}"
+        echo -e "  ${GREEN}✅ Artifacts already exist (using existing binaries)${RESET}"
+        echo -e "  ${BLUE}ℹ️  Note: If you changed code, run 'just build-all' first to rebuild${RESET}"
     fi
 
     # Step 3: Build Docker images
