feat(hermes): add sql queries for doc sync, added timestamp to wit value api

--- a/hermes/apps/athena/modules/doc-sync/Cargo.toml
+++ b/hermes/apps/athena/modules/doc-sync/Cargo.toml
@@ -11,5 +11,6 @@ workspace = true
 crate-type = ["cdylib"]
 
 [dependencies]
+anyhow = "1.0.100"
 shared = { version = "0.1.0", path = "../../shared" }
 serde_json = "1.0.145"
