--- a/p2p-testing/justfile
+++ b/p2p-testing/justfile
@@ -387,7 +387,7 @@ validate-prereqs:
     #!/usr/bin/env bash
     set -euo pipefail
     GREEN='\033[32m'; RED='\033[31m'; YELLOW='\033[33m'
-    BLUE='\033[34m'; RESET='\033[0m'
+    BLUE='\033[34m'; BOLD='\033[1m'; RESET='\033[0m'
 
     echo -e "${BLUE}🔍 Validating Prerequisites${RESET}"
     echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
