--- a/p2p-testing/justfile
+++ b/p2p-testing/justfile
@@ -417,24 +417,20 @@ validate-prereqs:
         ERRORS=$((ERRORS + 1))
     fi
 
-    # Check Hermes binary
+    # Check Hermes binary (informational - will be built by quickstart if needed)
     echo -n "  Hermes binary... "
     if [ -f "../hermes/target/release/hermes" ]; then
         echo -e "${GREEN}✅${RESET}"
     else
-        echo -e "${RED}❌${RESET}"
-        echo -e "    ${RED}Binary not found: ../hermes/target/release/hermes${RESET}"
-        ERRORS=$((ERRORS + 1))
+        echo -e "${YELLOW}⚠️  Not found (will be built)${RESET}"
     fi
 
-    # Check Athena app
+    # Check Athena app (informational - will be built by quickstart if needed)
     echo -n "  Athena app... "
     if [ -f "../hermes/apps/athena/athena.happ" ]; then
         echo -e "${GREEN}✅${RESET}"
     else
-        echo -e "${RED}❌${RESET}"
-        echo -e "    ${RED}App not found: ../hermes/apps/athena/athena.happ${RESET}"
-        ERRORS=$((ERRORS + 1))
+        echo -e "${YELLOW}⚠️  Not found (will be built)${RESET}"
     fi
 
     # Check disk space
@@ -477,23 +473,8 @@ validate-prereqs:
         echo ""
         exit 0
     else
-        echo -e "${RED}❌ Found $ERRORS issue(s)${RESET}"
+        echo -e "${RED}❌ Found $ERRORS issue(s). Please fix them before continuing.${RESET}"
         echo ""
-
-        # Provide clear action based on what's missing
-        MISSING_HERMES=false
-        MISSING_ATHENA=false
-        [ ! -f "../hermes/target/release/hermes" ] && MISSING_HERMES=true
-        [ ! -f "../hermes/apps/athena/athena.happ" ] && MISSING_ATHENA=true
-
-        if [ "$MISSING_HERMES" = true ] || [ "$MISSING_ATHENA" = true ]; then
-            echo -e "${BOLD}Next step:${RESET} Build the missing artifacts"
-            echo -e "  ${YELLOW}→ Run: just build-all${RESET}"
-            echo ""
-            echo -e "  (This will build both Hermes binary and Athena app)"
-            echo ""
-        fi
-
         exit 1
     fi
 
@@ -1446,8 +1427,8 @@ help:
     @echo ""
     @echo "  From Scratch (simulates fresh git clone):"
     @echo "    just clean            # Remove everything"
-    @echo "    just build-all        # Build from scratch"
-    @echo "    just quickstart       # Start and verify"
+    @echo "    just quickstart       # Builds automatically and starts"
+    @echo "    # OR: just build-all && just quickstart  # Manual build first"
     @echo ""
     @echo "BUILD COMMANDS:"
     @echo "  build                   Build Hermes binary only (fast)"
