--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -32,10 +32,10 @@ path = "tests/integration/tests/mod.rs"
 [dependencies]
 # Catalyst Internal Crates
 # Using branch with transport enable methods until merged into a release tag
-hermes-ipfs = { version = "0.0.9", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "hermes-ipfs/v0.0.9", features = ["doc-sync"]  }
-cardano-blockchain-types = { version = "0.0.9", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "cardano-blockchain-types/v0.0.9" }
-cardano-chain-follower = { version = "0.0.19", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "cardano-chain-follower/v0.0.19" }
-catalyst-types = { version = "0.0.11", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "catalyst-types/v0.0.11" }
+hermes-ipfs = { path = "../../../catalyst-libs/rust/hermes-ipfs", features = ["doc-sync"]}
+cardano-blockchain-types = { path = "../../../catalyst-libs/rust/cardano-blockchain-types" }
+cardano-chain-follower= { path = "../../../catalyst-libs/rust/cardano-chain-follower" }
+catalyst-types = { path = "../../../catalyst-libs/rust/catalyst-types" }
 
 # HDF5 is consumed using a git tag, because the latest release is very old, but the code is much more advanced.
 hdf5 = { package = "hdf5-metno", version = "0.10.1", features = [ "static", "blosc", "blosc-zstd" ] }
